# v4l2sdl

./: CMakeLists.txt  main.c  opt.c  opt.h  screen.c  screen.h  video.c  video.h
